<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>TrustListDataModelLib</groupId>
  <artifactId>TrustListDataModelLib</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
   		<groupId>javax.xml.bind</groupId>
   		<artifactId>jaxb-api</artifactId>
   		<version>2.2.1</version>
	</dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.10</version>
      <classifier>javadoc</classifier>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.10</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>1.47</version>
      <classifier>sources</classifier>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-ext-jdk14</artifactId>
      <version>1.47</version>
    </dependency>
    <dependency>
  	  <groupId>com.googlecode.xades4j</groupId>
  	  <artifactId>xades4j</artifactId>
  	  <version>1.3.2</version>
	</dependency>
	<dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
	</dependency>
	<dependency>
		<groupId>GUIUtils</groupId>
		<artifactId>GUIUtils</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</dependency>
  </dependencies>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
    	<resource>
    	 <filtering>true</filtering>
         	<directory>src/main/java/resources</directory>
        <excludes>
        	<exclude>**.java</exclude>
        </excludes>
        </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>com.zeva.tlGen.mainApp.TLGenMain</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
     <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>